Fixing Gradle build issues